Bug #7223 information_schema: error in "views"
Submitted: 13 Dec 2004 1:46 Modified: 14 Dec 2004 8:29
Reporter: Peter Gulutzan Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server Severity:S3 (Non-critical)
Version:5.0.3-alpha-debug OS:Linux (SUSE 9.2)
Assigned to: Sergei Glukhov CPU Architecture:Any

[13 Dec 2004 1:46] Peter Gulutzan
Description:
If I make a view with a check option the 
information_schema.views check_option column  
contains 'WITH CASCADED CHECK OPTION' instead 
of 'CASCADED'. 
 

How to repeat:
mysql> create view v as select * from ttt with check option; 
Query OK, 0 rows affected (0.00 sec) 
 
mysql> select * from information_schema.views; 
+---------------+--------------+------------+--------------------------------------------------+----------------------------+--------------+ 
| TABLE_CATALOG | TABLE_SCHEMA | TABLE_NAME | VIEW_DEFINITION                                  
| CHECK_OPTION               | IS_UPDATABLE | 
+---------------+--------------+------------+--------------------------------------------------+----------------------------+--------------+ 
| NULL          | db5          | v          | select `db5`.`ttt`.`s1` AS `s1` from `db5`.`ttt` | WITH 
CASCADED CHECK OPTION | YES         | 
+---------------+--------------+------------+--------------------------------------------------+----------------------------+--------------+ 
1 row in set (0.04 sec)
[14 Dec 2004 8:29] Sergei Glukhov
Fixed in 5.0 source tree