Fix for bug #7223: information_schema: error in "views"